# shooteroo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/src/: Engine.h  EngineUtil.h  Macros.h
engine/src/core/application/: Application.cpp  Application.h
engine/src/core/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
engine/src/core/imGuiLayer/: ImGuiLayer.cpp  ImGuiLayer.h
engine/src/core/layer/: Layer.cpp  Layer.h
engine/src/core/layerStack/: LayerStack.cpp  LayerStack.h
engine/src/core/logger/: Logger.cpp  Logger.h
engine/src/core/renderer/texture/: Texture.cpp  Texture.h
engine/src/core/util/: OpenGlDebug.cpp  OpenGlDebug.h  Random.cpp  Random.h  Shader.cpp  Shader.h
engine/src/core/window/: Input.h  Window.h
engine/src/platform/windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
shooteroo/: CMakeLists.txt
shooteroo/resources/shaders/shooteroo/: entity.fshader  entity.vshader
shooteroo/src/: Game.cpp  Game.h  Shooteroo.cpp  Shooteroo.h  main.cpp
shooteroo/src/base/: Actor.cpp  Actor.h  Entity.cpp  Entity.h
shooteroo/src/entities/: Bullet.cpp  Bullet.h  Hostile.cpp  Hostile.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
shooteroo/src/settings/: Definitions.h  GameSettings.cpp  GameSettings.h
